Added "admin" jboss user to access management console. Using JBoss "simple" access control.

--- a/domains/cluster2/configuration/host1.properties
+++ b/domains/cluster2/configuration/host1.properties
@@ -38,3 +38,7 @@ jboss.domain.log.dir=c:/domains/cluster2/log
 jboss.config.dir=c:/domains/cluster2
 
 jboss.messaging.cluster.password=Cluster1!
+# 
+# secret key of admin user. For illustration purpose, should remove
+#<secret value="Q2x1c3RlcjEh" />
+#jboss.admin.user.password=Cluster1!
