--- a/domains/cluster4-tx-node/configuration/host1.properties
+++ b/domains/cluster4-tx-node/configuration/host1.properties
@@ -45,3 +45,7 @@ jboss.domain.log.dir=c:/domains/cluster4-tx-node/log
 jboss.config.dir=c:/domains/cluster4-tx-node
 
 jboss.messaging.cluster.password=Cluster1!
+# 
+# secret key of admin user. For illustration purpose, should remove
+#<secret value="Q2x1c3RlcjEh" />
+#jboss.admin.user.password=Cluster1!
