--- a/domains/cluster4-vault/configuration/host1.properties
+++ b/domains/cluster4-vault/configuration/host1.properties
@@ -47,3 +47,7 @@ jboss.config.dir=c:/domains/cluster4-vault
 # The following password is encrypted and stored in vault.
 # It is listed here for illustration purpose only.  It should be removed.
 #jboss.messaging.cluster.password=Cluster1!
+# 
+# secret key of admin user. For illustration purpose, should remove
+#<secret value="Q2x1c3RlcjEh" />
+#jboss.admin.user.password=Cluster1!
