--- a/domains/cluster2-unicast/configuration/host1.properties
+++ b/domains/cluster2-unicast/configuration/host1.properties
@@ -40,3 +40,7 @@ jboss.domain.log.dir=c:/domains/cluster2-unicast/log
 jboss.config.dir=c:/domains/cluster2-unicast
 
 jboss.messaging.cluster.password=Cluster1!
+# 
+# secret key of admin user. For illustration purpose, should remove
+#<secret value="Q2x1c3RlcjEh" />
+#jboss.admin.user.password=Cluster1!
